--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
 
       <div class="footer-bottom">
         <p class="copyright">
-          &copy; 2020 All Rights Reserved. Developed by codewithsadee
+          &copy; 2020 All Rights Reserved. Developed by Noman
         </p>
       </div>
 
