--- a/index.html
+++ b/index.html
@@ -956,20 +956,20 @@
               <p class="contact-title">Headquarters:</p>
 
               <address class="address text">
-                795 Folsom Ave, Suite 600 San Francisco, CA 94107
+                Pakistan Punjab Faisalabad 
               </address>
             </li>
 
             <li class="contact-item">
               <p class="contact-title">Phone:</p>
 
-              <a href="tel:+524623435643" class="text">(+52) 4623 435643</a>
+              <a href="tel:+923057184703" class="text">(+52) 4623 435643</a>
             </li>
 
             <li class="contact-item">
               <p class="contact-title">Email:</p>
 
-              <a href="mailto:info@covid-19.com" class="text">info@covid-19.com</a>
+              <a href="mailto:info@covid-19.com" class="text">nomi4698dg@gmail.com</a>
             </li>
 
           </ul>
