--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
             <li class="contact-item">
               <p class="contact-title">Phone:</p>
 
-              <a href="tel:+923057184703" class="text">(+52) 4623 435643</a>
+              <a href="tel:+923057184703" class="text">(+92) 3057184703 </a>
             </li>
 
             <li class="contact-item">
